# NIR3

./: .gitignore  pyproject.toml  Подготваливаем_данные_для_классификатора.ipynb
files/: dic_lables.txt  mobalkanskiy.csv  o_dec_geo.csv  spb_sm_pablic.csv  spbmo72_2024.csv  Данные_для_классификатора_1.сsv  Данные_для_классификатора_2.csv  Данные_для_классификатора_3.csv  Обработанные_сообщения_example.csv  Районы СПб.geojson  Сообщества ВК для сбора данных.xlsx
files/Сообщения из соцсетей/: club177930722.csv  club59160781.csv  gharadmiral.csv  infoeco_spb.csv  kiospb.csv  kis_gov.csv  kkispb.csv  komarovo.true.csv  mo.porohovie.csv  mo_shuvalovoozerki.csv  mobalkanskiy.csv  mogavan.csv  mograjdanka.csv  mos_zastava.csv  mosolnechnoe.csv  moyokrug54.csv  okrug57.csv  public67408379.csv  sestroreck.home.csv  vladimokspb.csv
nir3/: Hand_tagger.py  Обработка НСПБ.ipynb  Обучение_модели_класс_тем.ipynb  Обучение_модели_классификатора.ipynb  Объединение_данных_из_источников.ipynb  Подготваливаем_данные_для_классификатора.ipynb  Подготовка_данных_для_касс_тем.ipynb  Предобработка_сообщения_соцсети.ipynb  Тест_модели_классификатора.ipynb
